# mlb-graphical-standings

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
mlb-graphical-standings/: graphical_standings.py
mlb_graphical_standings/: __init__.py  caption_generator.py  chart_creation.py  content_creation.py  email_formatter.py  graphical_standings.py  prompt.txt  utils.py
sample_files/: auto_run.sh  prompt_Fri.txt  prompt_Mon.txt  prompt_Sat.txt  prompt_Sun.txt  prompt_Thu.txt  prompt_Tue.txt  prompt_Wed.txt
tests/: sample_prompt.txt  test_everything.py  tests.py
